done first website

--- a/app/views/freinds/_freind.html.erb
+++ b/app/views/freinds/_freind.html.erb
@@ -1,5 +1,4 @@
-<td> <%= freind.first_name %></td>
-<td> <%= freind.last_name %></td>
+<td><%= link_to freind.first_name + ' ' + freind.last_name, freind, class:"btn btn-info"%></td>
 <td> <%= freind.email %></td>
 <td> <%= freind.phone %></td>
 <td> <%= freind.twitter %></td>
