--- a/app/views/freinds/index.html.erb
+++ b/app/views/freinds/index.html.erb
@@ -1,29 +1,32 @@
-<h1>Freinds list</h1>
-<div id="freinds">
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th scope="col">First name</th>
-      <th scope="col">Last name</th>
-      <th scope="col">Handle</th>
-      <th scope="col">email</th>
-      <th scope="col">phone</th>
-      <th scope="col">User Id</th>
-    </tr>
-  </thead>
-<tbody>
-  <% @freinds.each do |freind| %>
-    <% if freind.user == current_user %>
+<% if user_signed_in? %>
+  <h1>Freinds list</h1>
+  <div id="freinds">
+  <table class="table table-bordered table-striped table-hover">
+    <thead>
       <tr>
-          <%= render freind %>
-          <td><%= link_to "Show", freind, class:"btn btn-info"%></td>
-          <td><%= link_to "Edit", edit_freind_path(freind), class:"btn btn-warning" %></td>
-          <td><%= link_to "Destroy", freind, method: :delete, class:"btn btn-danger" %></td>
+        <th scope="col">Name</th>
+        <th scope="col">Handle</th>
+        <th scope="col">email</th>
+        <th scope="col">phone</th>
+        <th scope="col">User Id</th>
+        <th></th>
       </tr>
+    </thead>
+  <tbody>
+    <% @freinds.each do |freind| %>
+      <% if freind.user == current_user %>
+        <tr>
+            <%= render freind %>
+            <td><%= link_to "Destroy", freind, method: :delete, class:"btn btn-outline-danger btn-sm" %></td>
+        </tr>
+      <% end %>
     <% end %>
-  <% end %>
-</tbody>
-</table>
-</div>
+  </tbody>
+  </table>
+  </div>
+  <%= link_to "New freind", new_freind_path, class:"btn btn-secondary" %>
+<% else %>
+  <h1>Hello World</h1>
+  <p>this is my first page</p>
+<% end %>
 
-<%= link_to "New freind", new_freind_path, class:"btn btn-secondary" %>
